Library/AXL(Library)/C, C++/AXM.h

//==== Regular interpolation API ============================================================================================================================================;
// Do linear interpolate.
// API which moves multi-axis linear interpolation by specifying start point and ending point. It escapes from API after commencing of move.
// When it is used with AxmContiBeginNode and AxmContiEndNode, it becomes Save API in the queue which moves linear interpolation by specifying start point and ending point in the specified  coordinates system.
// For the continuous interpolation move of linear profile, save it in internal queue and start by using AxmContiStart API.
DWORD    __stdcall AxmLineMove(long lCoord, double *dpEndPos, double dVel, double dAccel, double dDecel);
// Interpolate 2 axis arc
// API which moves arc interpolation by specifying start point, ending point and center point. It escapes from API after commencing of move.
// When it is used with AxmContiBeginNode and AxmContiEndNode, it becomes Save API in the arc interpolation queue which moves by specifying start point, ending point and center point in the specified  coordinates system.
// For the profile arc continuous interpolation move, save it internal queue and start by using AxmContiStart API.
// lAxisNo = 2 axis array , dCenterPos = center point X,Y array , dEndPos = ending point X,Y array.
// uCWDir   DIR_CCW(0): Counterclockwise direction,   DIR_CW(1) Clockwise direction
DWORD   __stdcall AxmCircleCenterMove(long lCoord, long *lAxisNo, double *dCenterPos, double *dEndPos, double dVel, double dAccel, double dDecel, DWORD uCWDir);
// Start registration of tasks to be executed in continuous interpolation at the specific  coordinate system. After call this API,
// all motion tasks to be executed before calling of AxmContiEndNode API are not execute actual motion, but are registered as continuous interpolation motion,
// and when AxmContiStart API is called, then the registered motions execute actually
DWORD    __stdcall AxmContiBeginNode(long lCoord);
// Finish registration of tasks to be executed in continuous interpolation at the specific  coordinate system.
DWORD    __stdcall AxmContiEndNode(long lCoord);
// Start continuous interpolation.
// if dwProfileset is  CONTI_NODE_VELOCITY(0), use continuous interpolation.
//                     CONTI_NODE_MANUAL(1)  , set profile interpolation use.
//                     CONTI_NODE_AUTO(2)    , use auto-profile interpolation.
DWORD    __stdcall AxmContiStart(long lCoord, DWORD dwProfileset, long lAngle);
// API which verifies whether the continuous interpolation is moving in the specific coordinate system.
DWORD    __stdcall AxmContiIsMotion(long lCoord, DWORD *upInMotion);
// API which verifies the index number of the continuous interpolation that is being moving currently while the continuous interpolation is moving in the specific coordinate system.
DWORD    __stdcall AxmContiGetNodeNum(long lCoord, long *lpNodeNum);
// API which verifies the total number of continuous interpolation index that were set in  the specific coordinate system.
DWORD    __stdcall AxmContiGetTotalNodeNum(long lCoord, long *lpNodeNum);
// Outputs digital signal from a specific motion segment.
// It should be used between the AxmContiBeginNode function and the AxmContiEndNode function.
// It is valid only for continuous interpolation drive function (ex: AxmLineMove, AxmCircleCenterMove, etc ...).
// Digital output is made earlier than the condition based on the end point of the next continuous interpolation drive function.
//
// lSize        : Number of IO contacts to be output simultaneously (1~8)
// lModuleNo    : If dwModuleType is 0, it is axis number. if dwModuleType is 1, it is Digital I / O Module No.
// dwModuleType : Motion I/O Output(Output of the slave itself)(0), Digital I/O Output(1)
//
// The following four parameters can be used to control multiple output contacts simultaneously by entering them in an array of lSize.
// lpBit          : Offset position for output contact
// lpOffOn        : Output value of corresponding output contact. LOW(0), HIGH(1)
// dpDistTime     : Distance(pulse) or Time(msec) ==> Based on the motion profile end point.
// lpDistTimeMode : Distance mode(0), Time mode(1) ==> Based on the motion profile end point.
DWORD    __stdcall AxmContiDigitalOutputBit(long lCoord, long lSize, long lModuleType, long* lpModuleNo, long* lpBit, long* lpOffOn, double* dpDistTime, long* lpDistTimeMode);
DWORD    __stdcall AxmContiReadStop(long lCoord, DWORD *upStatus);
DWORD    __stdcall AxmContiSetLineMoveVelMode(long lCoord, DWORD uVelMode, long lMasterAxisNo);
DWORD    __stdcall AxmContiGetLineMoveVelMode(long lCoord, DWORD *upVelMode, long *lpMasterAxisNo);
DWORD    __stdcall AxmContiSetCheckSoftLimit(long lCoord, DWORD uUse);
DWORD    __stdcall AxmContiGetCheckSoftLimit(long lCoord, DWORD *upUse);
DWORD    __stdcall AxmContiSetConnectionRadius(long lCoord, double dRadius);
DWORD    __stdcall AxmContiSetConnectionMaxCentripetalAccel(long lCoord, double dMaxAccel);
//==================== trigger API ===============================================================================================================================
// Precautions : If you want set trigger position, you should be set according to setting status of Unit/Pulse.
//               If trigger position unit is smaller than Unit/Pulse, you can't output to desired position exactly because minimum unit will be set to UNIT/PULSE.

// Set whether to use of trigger function, output level, position comparator, trigger signal delay time and trigger output mode ino specific axis.
//  dTrigTime  : trigger output time
//             : 1usec - max 50msec ( set 1 - 50000)
//  upTriggerLevel  : whether to use or not use => LOW(0), HIGH(1), UNUSED(2), USED(3)
//  uSelect         : Standard position to use  => COMMAND(0), ACTUAL(1)
//  uInterrupt      : set interrupt             => DISABLE(0), ENABLE(1)

// Set trigger signal delay time , trigger output level and trigger output method in specific axis.
DWORD    __stdcall AxmTriggerSetTimeLevel(long lAxisNo, double dTrigTime, DWORD uTriggerLevel, DWORD uSelect, DWORD uInterrupt);
// Return trigger signal delay time , trigger output level and trigger output method to specific axis.
DWORD    __stdcall AxmTriggerGetTimeLevel(long lAxisNo, double *dpTrigTime, DWORD *upTriggerLevel, DWORD *upSelect, DWORD *upInterrupt);
//  uMethod :   PERIOD_MODE   0x0 : cycle trigger method using trigger position value
//              ABS_POS_MODE   0x1 : Trigger occurs at trigger absolute position,  absolute position method
//  dPos : in case of cycle selection : the relevant position  for output by position and position.
// in case of absolute selection: The position on which to output, If same as this position then output goes out unconditionally.
DWORD    __stdcall AxmTriggerSetAbsPeriod(long lAxisNo, DWORD uMethod, double dPos);
// Return whether to use of trigger function, output level, position comparator, trigger signal delay time and trigger output mode to specific axis.
DWORD    __stdcall AxmTriggerGetAbsPeriod(long lAxisNo, DWORD *upMethod, double *dpPos);
//  Output the trigger by regular interval from the starting position to the ending position specified by user.
DWORD    __stdcall AxmTriggerSetBlock(long lAxisNo, double dStartPos, double dEndPos, double dPeriodPos);
// Read trigger setting value of 'AxmTriggerSetBlock' API.
DWORD    __stdcall AxmTriggerGetBlock(long lAxisNo, double *dpStartPos, double *dpEndPos, double *dpPeriodPos);
// User outputs a trigger pulse.
DWORD    __stdcall AxmTriggerOneShot(long lAxisNo);
// User outputs a trigger pulse after several seconds.
DWORD    __stdcall AxmTriggerSetTimerOneshot(long lAxisNo, long lmSec);
// Output absolute position trigger infinite absolute position output.
DWORD    __stdcall AxmTriggerOnlyAbs(long lAxisNo,long lTrigNum, double* dpTrigPos);
// Reset trigger settings.
DWORD    __stdcall AxmTriggerSetReset(long lAxisNo);
//======== CRC( Remaining pulse clear API) =====================================================================
//Level   : LOW(0), HIGH(1), UNUSED(2), USED(3)
//uMethod : Available to set the width of remaining pulse eliminating output signal pulse in 2 - 6.
//          0: Don't care , 1: Don't care, 2: 500 uSec, 3:1 mSec, 4:10 mSec, 5:50 mSec, 6:100 mSec
//Set whether to use CRC signal in specific axis and output level.
DWORD    __stdcall AxmCrcSetMaskLevel(long lAxisNo, DWORD uLevel, DWORD uMethod);
// Return whether to use CRC signal of specific axis and output level.
DWORD    __stdcall AxmCrcGetMaskLevel(long lAxisNo, DWORD *upLevel, DWORD *upMethod);
//uOnOff  : Whether to generate CRC signal to the Program or not.  (FALSE(0),TRUE(1))
// Force to generate CRC signal to the specific axis.
DWORD    __stdcall AxmCrcSetOutput(long lAxisNo, DWORD uOnOff);
// Return whether to forcedly generate CRC signal of specific axis.
DWORD    __stdcall AxmCrcGetOutput(long lAxisNo, DWORD *upOnOff);
//====== MPG(Manual Pulse Generation) API ===========================================================
// lInputMethod : Available to set 0-3. 0:OnePhase, 1:TwoPhase1, 2:TwoPhase2, 3:TwoPhase4
// lDriveMode   : Available to set 0-5
//                0 :MPG continuous mode,             1 :MPG PRESET mode (Travel up to specific pulse), 2 :COMMAND ABSOLUTE MPG PRESET mode
//                3 :ACTUAL ABSOLUTE MPG PRESET mode, 4 :COMMAND ABSOLUTE ZERO MPG PRESET mode,         5 :ACTUAL ABSOLUTE ZERO MPG PRESET mode
// MPGPos        : the travel distance by every MPG input signal
// MPGdenominator: Divide value in MPG(Enter manual pulse generating device)movement
// dMPGnumerator : Product value in MPG(Enter manual pulse generating device)movement
// dwNumerator   : Available to set max(from 1 to  64)
// dwDenominator : Available to set max(from 1 to  4096)
// dMPGdenominator = 4096 and MPGnumerator=1 mean that
// the output is 1 by 1 pulse as 1:1 if one turn of MPG is 200pulse.
// If dMPGdenominator = 4096 and MPGnumerator=2 , then it means the output is 2 by 2 pulse as 1:2.
// In here, MPG PULSE = ((Numerator) * (Denominator)/ 4096 ) It’s the calculation which outputs to the inside of chip.

// Set MPG input method, Drive move mode, travel distance, MPG velocity in specific axis.
DWORD    __stdcall AxmMPGSetEnable(long lAxisNo, long lInputMethod, long lDriveMode, double dMPGPos, double dVel, double dAccel);
// Return MPG input method, Drive move mode, travel distance, MPG velocity in specific axis.
DWORD    __stdcall AxmMPGGetEnable(long lAxisNo, long *lpInputMethod, long *lpDriveMode, double *dpMPGPos, double *dpVel, double *dAccel);
// Set the pulse ratio to travel per pulse in MPG drive move mode to specific axis.
DWORD    __stdcall AxmMPGSetRatio(long lAxisNo, DWORD uMPGnumerator, DWORD uMPGdenominator);
// Return the pulse ratio to travel per pulse in MPG drive move mode to specific axis.
DWORD    __stdcall AxmMPGGetRatio(long lAxisNo, DWORD *upMPGnumerator, DWORD *upMPGdenominator);
// Release MPG drive settings to specific axis.
DWORD    __stdcall AxmMPGReset(long lAxisNo);