Library/AXL(Library)/Visual Basic(Net)/AXM.vb


' Start registration of tasks to be executed in continuous interpolation at the specific  coordinate system. After call this API,
' all motion tasks to be executed before calling of AxmContiEndNode API are not execute actual motion, but are registered as continuous interpolation motion,
' and when AxmContiStart API is called, then the registered motions execute actually
Public Declare Function AxmContiBeginNode Lib "AXL.dll" (ByVal lCoord As Integer) As Integer
' Finish registration of tasks to be executed in continuous interpolation at the specific  coordinate system.
Public Declare Function AxmContiEndNode Lib "AXL.dll" (ByVal lCoord As Integer) As Integer


' Start continuous interpolation.
' if dwProfileset is  CONTI_NODE_VELOCITY(0), use continuous interpolation.
'                     CONTI_NODE_MANUAL(1)  , set profile interpolation use.
'                     CONTI_NODE_AUTO(2)    , use auto-profile interpolation.
Public Declare Function AxmContiStart Lib "AXL.dll" (ByVal lCoord As Integer, ByVal nProfileset As Integer, ByVal lAngle As Integer) As Integer
' API which verifies whether the continuous interpolation is moving in the specific coordinate system.
Public Declare Function AxmContiIsMotion Lib "AXL.dll" (ByVal lCoord As Integer, ByRef upInMotion As Integer) As Integer

' API which verifies the index number of the continuous interpolation that is being moving currently while the continuous interpolation is moving in the specific coordinate system.
Public Declare Function AxmContiGetNodeNum Lib "AXL.dll" (ByVal lCoord As Integer, ByRef lpNodeNum As Integer) As Integer
' API which verifies the total number of continuous interpolation index that were set in  the specific coordinate system.
Public Declare Function AxmContiGetTotalNodeNum Lib "AXL.dll" (ByVal lCoord As Integer, ByRef lpNodeNum As Integer) As Integer


' Outputs digital signal from a specific motion segment.
' It should be used between the AxmContiBeginNode function and the AxmContiEndNode function.
' It is valid only for continuous interpolation drive function (ex: AxmLineMove, AxmCircleCenterMove, etc ...).
' Digital output is made earlier than the condition based on the end point of the next continuous interpolation drive function.
'
' lSize        : Number of IO contacts to be output simultaneously (1~8)
' lModuleNo    : If dwModuleType is 0, it is axis number. if dwModuleType is 1, it is Digital I / O Module No.
' dwModuleType : Motion I/O Output(Output of the slave itself)(0), Digital I/O Output(1)
'
' The following four parameters can be used to control multiple output contacts simultaneously by entering them in an array of lSize.
' lpBit          : Offset position for output contact
' lpOffOn        : Output value of corresponding output contact. LOW(0), HIGH(1)
' dpDistTime     : Distance(pulse) or Time(msec) ==> Based on the motion profile end point.
' lpDistTimeMode : Distance mode(0), Time mode(1) ==> Based on the motion profile end point.
Public Declare Function AxmContiDigitalOutputBit Lib "AXL.dll" (ByVal lCoord As Integer, ByVal lSize As Integer, ByVal lModuleType As Integer, ByRef lpModuleNo As Integer, ByRef lpBit As Integer, ByRef lpOffOn As Integer, ByRef dpDistTime As Double, ByRef lpDistTimeMode As Integer) As Integer

    Public Declare Function AxmContiReadStop Lib "AXL.dll" (ByVal lCoord As Integer, ByRef upStatus As Integer) As Integer

    Public Declare Function AxmContiSetLineMoveVelMode Lib "AXL.dll" (ByVal lCoord As Integer, ByVal uVelMode As Integer, ByVal lMasterAxisNo As Integer) As Integer
    Public Declare Function AxmContiGetLineMoveVelMode Lib "AXL.dll" (ByVal lCoord As Integer, ByRef upVelMode As Integer, ByRef lpMasterAxisNo As Integer) As Integer

    Public Declare Function AxmContiSetCheckSoftLimit Lib "AXL.dll" (ByVal lCoord As Integer, ByVal uUse As Integer) As Integer
    Public Declare Function AxmContiGetCheckSoftLimit Lib "AXL.dll" (ByVal lCoord As Integer, ByRef upUse As Integer) As Integer

    Public Declare Function AxmContiSetConnectionRadius Lib "AXL.dll" (ByVal lCoord As Integer, ByVal dRadius As Double) As Integer
    Public Declare Function AxmContiSetConnectionMaxCentripetalAccel Lib "AXL.dll" (ByVal lCoord As Integer, ByVal dMaxAccel As Double) As Integer



'==================== trigger API ===============================================================================================================================
' Precautions : If you want set trigger position, you should be set according to setting status of Unit/Pulse.
'               If trigger position unit is smaller than Unit/Pulse, you can't output to desired position exactly because minimum unit will be set to UNIT/PULSE.

' Set whether to use of trigger function, output level, position comparator, trigger signal delay time and trigger output mode ino specific axis.
'  dTrigTime  : trigger output time
'             : 1usec - max 50msec ( set 1 - 50000)
'  upTriggerLevel  : whether to use or not use     => LOW(0), HIGH(1), UNUSED(2), USED(3)
'  uSelect         : Standard position to use    => COMMAND(0), ACTUAL(1)
'  uInterrupt      : set interrupt        => DISABLE(0), ENABLE(1)

' Set trigger signal delay time , trigger output level and trigger output method in specific axis.
Public Declare Function AxmTriggerSetTimeLevel Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dTrigTime As Double, ByVal uTriggerLevel As Integer, ByVal uSelect As Integer, ByVal uInterrupt As Integer) As Integer
' Return trigger signal delay time , trigger output level and trigger output method to specific axis.
Public Declare Function AxmTriggerGetTimeLevel Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dpTrigTime As Double, ByRef upTriggerLevel As Integer, ByRef upSelect As Integer, ByRef upInterrupt As Integer) As Integer


'  uMethod :   PERIOD_MODE   0x0 : cycle trigger method using trigger position value
'              ABS_POS_MODE   0x1 : Trigger occurs at trigger absolute position,  absolute position method
'  dPos : in case of cycle selection : the relevant position  for output by position and position.
' in case of absolute selection: The position on which to output, If same as this position then output goes out unconditionally.
Public Declare Function AxmTriggerSetAbsPeriod Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal uMethod As Integer, ByVal dPos As Double) As Integer
' Return whether to use of trigger function, output level, position comparator, trigger signal delay time and trigger output mode to specific axis.
Public Declare Function AxmTriggerGetAbsPeriod Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upMethod As Integer, ByRef dpPos As Double) As Integer


'  Output the trigger by regular interval from the starting position to the ending position specified by user.
Public Declare Function AxmTriggerSetBlock Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dStartPos As Double, ByVal dEndPos As Double, ByVal dPeriodPos As Double) As Integer
' Read trigger setting value of 'AxmTriggerSetBlock' API.
Public Declare Function AxmTriggerGetBlock Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dpStartPos As Double, ByRef dpEndPos As Double, ByRef dpPeriodPos As Double) As Integer

' User outputs a trigger pulse.
Public Declare Function AxmTriggerOneShot Lib "AXL.dll" (ByVal lAxisNo As Integer) As Integer
' User outputs a trigger pulse after several seconds.
Public Declare Function AxmTriggerSetTimerOneshot Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal lmSec As Integer) As Integer
' Output absolute position trigger infinite absolute position output.
Public Declare Function AxmTriggerOnlyAbs Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal lTrigNum As Integer, ByRef dpTrigPos As Double) As Integer
' Reset trigger settings.
Public Declare Function AxmTriggerSetReset Lib "AXL.dll" (ByVal lAxisNo As Integer) As Integer


'======== CRC( Remaining pulse clear API) =====================================================================

'Level   : LOW(0), HIGH(1), UNUSED(2), USED(3)
'uMethod : Available to set the width of remaining pulse eliminating output signal pulse in 2 - 6.
'          0: Don't care , 1: Don't care, 2: 500 uSec, 3:1 mSec, 4:10 mSec, 5:50 mSec, 6:100 mSec

'Set whether to use CRC signal in specific axis and output level.
Public Declare Function AxmCrcSetMaskLevel Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal uLevel As Integer, ByVal lMethod As Integer) As Integer
' Return whether to use CRC signal of specific axis and output level.
Public Declare Function AxmCrcGetMaskLevel Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upLevel As Integer, ByVal lMethod As Integer) As Integer


'uOnOff  : Whether to generate CRC signal to the Program or not.  (FALSE(0),TRUE(1))
' Force to generate CRC signal to the specific axis.
Public Declare Function AxmCrcSetOutput Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal uOnOff As Integer) As Integer
' Return whether to forcedly generate CRC signal of specific axis.
Public Declare Function AxmCrcGetOutput Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upOnOff As Integer) As Integer



'====== MPG(Manual Pulse Generation) API ===========================================================

' lInputMethod : Available to set 0-3. 0:OnePhase, 1:TwoPhase1, 2:TwoPhase2, 3:TwoPhase4
' lDriveMode   : Available to set 0-5
'                0 :MPG continuous mode ,1 :MPG PRESET mode (Travel up to specific pulse), 2 :COMMAND ABSOLUTE MPG PRESET mode
'                3 :ACTUAL ABSOLUTE MPG PRESET mode ,4 :COMMAND ABSOLUTE ZERO MPG PRESET mode, 5 :ACTUAL ABSOLUTE ZERO MPG PRESET mode
' MPGPos       : the travel distance by every MPG input signal

' MPGdenominator: Divide value in MPG(Enter manual pulse generating device)movement
' dMPGnumerator : Product value in MPG(Enter manual pulse generating device)movement
' dwNumerator   : Available to set max(from 1 to  64)
' dwDenominator : Available to set max(from 1 to  4096)
' dMPGdenominator = 4096 and MPGnumerator=1 mean that
' the output is 1 by 1 pulse as 1:1 if one turn of MPG is 200pulse.
' If dMPGdenominator = 4096 and MPGnumerator=2 , then it means the output is 2 by 2 pulse as 1:2.
' In here, MPG PULSE = ((Numerator) * (Denominator)/ 4096 ) It’s the calculation which outputs to the inside of chip.

' Set MPG input method, Drive move mode, travel distance, MPG velocity in specific axis.
Public Declare Function AxmMPGSetEnable Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal lInputMethod As Integer, ByVal lDriveMode As Integer, ByVal dMPGPos As Double, ByVal dVel As Double, ByVal dAccel As Double) As Integer
' Return MPG input method, Drive move mode, travel distance, MPG velocity in specific axis.
Public Declare Function AxmMPGGetEnable Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef lpInputMethod As Integer, ByRef lpDriveMode As Integer, ByRef dpMPGPos As Double, ByRef dpVel As Double, ByRef dpAccel As Double) As Integer


' Set the pulse ratio to travel per pulse in MPG drive move mode to specific axis.
Public Declare Function AxmMPGSetRatio Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal uMPGnumerator As Integer, ByVal uMPGdenominator As Integer) As Integer
' Return the pulse ratio to travel per pulse in MPG drive move mode to specific axis.
Public Declare Function AxmMPGGetRatio Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upMPGnumerator As Integer, ByRef upMPGdenominator As Integer) As Integer

' Release MPG drive settings to specific axis.
Public Declare Function AxmMPGReset Lib "AXL.dll" (ByVal lAxisNo As Integer) As Integer


